--- a/Grid-Site/grid3.html
+++ b/Grid-Site/grid3.html
@@ -63,8 +63,45 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <ul class="nav nav-pills mb-1">
+               <li class="nav-item">
+                   <a href="grid3.html"" class="nav-link active" aria-current="page">Grid 3</a>
+               </li>
+               <li class="nav-item">
+                   <a href="grid3b.html" class="nav-link">Grid 3:B</a>
+               </li>
+           </ul>
+           <div class="row h-100">
+               <!--Left-->
+               <div class="col-7 h-100">
+                   <div class="bg-secondary text-light p-2 h-100">
+                    <p>Lorem ipsum dolor sit amet. Aut maiores dicta 33 minus eligendi aut deserunt beatae. Qui tempora ipsum eos nihil ipsa33 nemo. 33 corporis rerum sit corrupti molestiaset magni! Ut maxime natus et sapiente delectus est ducimus ipsum ab minus molestias. </p>
+
+                   </div>
+               </div>
+               <!--Right-->
+               <div class="col-5 h-100 d-flex flex-column justify-content-evenly">
+                   <!--Right Top-->
+                   <div class="bg-dark text-light h-50 mt-2 p-2 overflow-auto">
+                    <p>Lorem ipsum dolor sit amet. Aut maiores dicta 33 minus eligendi aut deserunt beatae. Qui tempora ipsum eos nihil ipsa33 nemo. 33 corporis rerum sit corrupti molestiaset magni! Ut maxime natus et sapiente delectus est ducimus ipsum ab minus molestias. </p>
+                    <p>Lorem ipsum dolor sit amet. Aut maiores dicta 33 minus eligendi aut deserunt beatae. Qui tempora ipsum eos nihil ipsa33 nemo. 33 corporis rerum sit corrupti molestiaset magni! Ut maxime natus et sapiente delectus est ducimus ipsum ab minus molestias. </p>
+                    <p>Lorem ipsum dolor sit amet. Aut maiores dicta 33 minus eligendi aut deserunt beatae. Qui tempora ipsum eos nihil ipsa33 nemo. 33 corporis rerum sit corrupti molestiaset magni! Ut maxime natus et sapiente delectus est ducimus ipsum ab minus molestias. </p>
+
+
+                   </div>
+                   <!--Right Bottom-->
+                   <div class="bg-dark text-light h-50 mt-2 p-2 overflow-hidden">
+                    <p>Lorem ipsum dolor sit amet. Aut maiores dicta 33 minus eligendi aut deserunt beatae. Qui tempora ipsum eos nihil ipsa33 nemo. 33 corporis rerum sit corrupti molestiaset magni! Ut maxime natus et sapiente delectus est ducimus ipsum ab minus molestias. </p>
+                    <p>Lorem ipsum dolor sit amet. Aut maiores dicta 33 minus eligendi aut deserunt beatae. Qui tempora ipsum eos nihil ipsa33 nemo. 33 corporis rerum sit corrupti molestiaset magni! Ut maxime natus et sapiente delectus est ducimus ipsum ab minus molestias. </p>
+
+                   </div>
+                   <div class="bg-dark text-light border border-top p-2">
+                       <button class="btn btn-light" type="button">Read Me</button>
+                   </div>
+
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark">
