--- a/Grid-Site/grid4.html
+++ b/Grid-Site/grid4.html
@@ -63,7 +63,24 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
+       <div class="container h-100 minHeight">
+           <div class="row h-100 row-cols-1 row-cols-md-3 gy-1">
+               <div class="col">
+                   <div class="h-100 bg-secondary text-light p-3">
+                    <h5>Column One</h5>
+                   </div>                   
+               </div>
+               <div class="col">
+                   <div class="h-100 bg-dark text-light p-3">
+                    <h5>Column Two</h5>
+                   </div>
+               </div>
+               <div class="col">
+                   <div class="h-100 bg-secondary text-light p-3">
+                       <h5>Column Three</h5>
+                    </div>
+               </div>
+           </div>
            
        </div>
     </main>
