--- a/Grid-Site/grid5.html
+++ b/Grid-Site/grid5.html
@@ -63,8 +63,25 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container h-100 minHeight">
+           <div class="row h-100 row-cols-1 row-cols-md-3 gy-1">
+               <div class="col col-md-3">
+                   <div class="bg-secondary text-light h-100 p-3">
+                       Column One
+                   </div>
+               </div>
+               <div class="col col-md-6">
+                <div class="bg-dark text-light h-100 p-3">
+                    Column Two                       
+                </div>
+               </div>
+               <div class="col col-md-3">
+                <div class="bg-secondary text-light h-100 p-3">
+                       Column Three
+                </div>
+
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark">
