--- a/Grid-Site/grid8.html
+++ b/Grid-Site/grid8.html
@@ -63,8 +63,21 @@
 </nav>
 
     <main class="flex-shrink-0">
-       <div class="container">
-           
+       <div class="container-fluid h-100 minHeight">
+           <div class="row h-100 row-cols-1 row-cols-md-2 gy-2">
+               <div class="col col-md-12">
+                   <div class="bg-dark h-100 text-white">COL ONE</div>
+               </div>
+               <div class="col col-md-4">
+                   <div class="bg-secondary h-100 text-white">COL TWO</div>
+               </div>
+               <div class="col col-md-4">
+                   <div class="bg-dark h-100 text-white">COL THREE</div>
+               </div>
+               <div class="col col-md-4">
+                   <div class="bg-secondary h-100 text-white">COL FOUR</div>
+               </div>
+           </div>
        </div>
     </main>
     <footer class="footer mt-auto py-3 bg-dark">
