--- a/Grid-Site/grid4.html
+++ b/Grid-Site/grid4.html
@@ -18,49 +18,49 @@
 
 <body class="d-flex flex-column h-100">
 
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Grids</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                    <a class="nav-link "  href="/Grid-Site/index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid1.html">Grid 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid2.html">Grid 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid3.html">Grid 3</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/Grid-Site/grid4.html">Grid 4</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid5.html">Grid 5</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid6.html">Grid 6</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid7.html">Grid 7</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid8.html">Grid 8</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Grid-Site/grid9.html">Grid 9</a>
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Grids</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link"  href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="grid1.html">Grid 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid2.html">Grid 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid3.html">Grid 3</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="grid4.html">Grid 4</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid5.html">Grid 5</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid6.html">Grid 6</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid7.html">Grid 7</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid8.html">Grid 8</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="grid9.html">Grid 9</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
     <main class="flex-shrink-0">
        <div class="container h-100 minHeight">
